--- a/src/main/resources/templates/felvasarlasijegy.html
+++ b/src/main/resources/templates/felvasarlasijegy.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html lang="hu"	layout:decorator="main">
 <head>
-	<title>Felv·s·rl·s</title>
+	<meta charset="utf-8" />
+	<title>Felv√°s√°rl√°s</title>
 </head>
 <body>
 		
 	<div layout:fragment="content">
 		
-		<h2>Felv·s·rl·si jegy kÈszÌtı men¸</h2>
+		<h2>Felv√°s√°rl√°si jegy k√©sz√≠t≈ë men√º</h2>
 
 	</div>
 
