--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -28,12 +28,12 @@
 		    <div class="container-fluid">
 		       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 				    <ul class="nav navbar-nav">
-				        <li class="active"><a href="/">Kezdőoldal</a></li>
-				        <li class=""><a href="/termelomerlegjegy.html">Termelő mérlegjegy</a></li>
-				        <li class=""><a href="/felvasarlasijegy.html">Felvásárlási jegy készítés</a></li>
-				        <li class=""><a href="/szamla.html">SZámla készítés</a></li>
-				        <li class=""><a href="/ugyfelszerkesztes.html">Ügyfelek szerkesztése</a></li>
-				        <li class=""><a href="/beallitas.html">Beállítás</a></li>
+				        <li class=""><a href="/">Kezdőoldal</a></li>
+				        <li class=""><a href="/termelomerlegjegy">Termelő mérlegjegy</a></li>
+				        <li class=""><a href="/felvasarlasijegy">Felvásárlási jegy készítés</a></li>
+				        <li class=""><a href="/szamla">Számla készítés</a></li>
+				        <li class=""><a href="/ugyfelszerkesztes">Ügyfelek szerkesztése</a></li>
+				        <li class=""><a href="/beallitas">Beállítás</a></li>
 				    </ul>
 				    
 				</div>
