--- a/src/main/resources/templates/szamla.html
+++ b/src/main/resources/templates/szamla.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html lang="hu"	layout:decorator="main">
 <head>
-	<title>Felvasarlas</title>
+	<meta charset="utf-8" />
+	<title>FelvÃ¡sÃ¡rlÃ¡s</title>
 </head>
 <body>
 		
 	<div layout:fragment="content">
 		
-		<h2>Számla készítés menüpont</h2>
+		<h2>SzÃ¡mla kÃ©szÃ­tÃ©s menÃ¼pont</h2>
 
 	</div>
 
