--- a/src/main/resources/templates/beallitas.html
+++ b/src/main/resources/templates/beallitas.html
@@ -1,10 +1,16 @@
 <!DOCTYPE html>
-<html>
+<html lang="hu"	layout:decorator="main">
 <head>
-<meta charset="UTF-8">
-<title>Insert title here</title>
+	<meta charset="utf-8" />
+	<title>Felvásárlás</title>
 </head>
 <body>
+		
+	<div layout:fragment="content">
+		
+		<h2>Beállítás</h2>
+
+	</div>
 
 </body>
 </html>
