--- a/src/main/resources/templates/beallitas.html
+++ b/src/main/resources/templates/beallitas.html
@@ -8,7 +8,38 @@
 		
 	<div layout:fragment="content">
 		
-		<h2>Beállítás</h2>
+		<h2>Paraméterek beállítása</h2>
+		
+		<div class="container">
+			<form name="ujbeallitas" th:action="@{/ujbeallitas}" th:object="${beallitas}"  method="POST">
+			  <div class="form-group">
+			    <label for="elsoOsztalyAr">I. osztály ára</label>
+			    <input type="text" class="form-control" id="elsoOsztalyAr" th:field="*{elsoOsztalyAr}" >
+			  </div>
+			  <div class="form-group">
+			    <label for="masodOsztalyAr">II. osztály ára</label>
+			    <input type="text" class="form-control" id="masodOsztalyAr" th:field="*{masodOsztalyAr}">
+			  </div>
+			  <div class="form-group">
+			    <label for="harmadOsztalyAr">III. osztály ára</label>
+			    <input type="text" class="form-control" id="harmadOsztalyAr" th:field="*{harmadOsztalyAr}">
+			  </div>
+			  <div class="form-group">
+			    <label for="negyedOsztalyAr">IV. osztály ára</label>
+			    <input type="text" class="form-control" id="negyedOsztalyAr" th:field="*{negyedOsztalyAr}">
+			  </div>
+			  <div class="form-group">
+			    <label for="vastagGyokerAr">Vastag gyökér ára</label>
+			    <input type="text" class="form-control" id="vastagGyokerAr" th:field="*{vastagGyokerAr}">
+			  </div>
+			  <div class="form-group">
+			    <label for="vekonyGyokerAr">Vékony gyökér ára</label>
+			    <input type="text" class="form-control" id="vekonyGyokerAr" th:field="*{vekonyGyokerAr}">
+			  </div>
+			  
+			  <button type="submit" class="btn btn-primary">Mentés</button>
+			</form>
+		</div>
 
 	</div>
 
