--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -28,8 +28,9 @@
 		    <div class="container-fluid">
 		       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 				    <ul class="nav navbar-nav">
-				        <li class=""><a href="/">Kezdőoldal</a></li>
+				        <li class=""><a href="/fooldal">Kezdőoldal</a></li>
 				        <li class=""><a href="/termelomerlegjegy">Termelő mérlegjegy</a></li>
+				        <li class=""><a href="/vevoimerlegjegy">Vevő mérlegjegy</a></li>
 				        <li class=""><a href="/felvasarlasijegy">Felvásárlási jegy készítés</a></li>
 				        <li class=""><a href="/szamla">Számla készítés</a></li>
 				        <li class=""><a href="/ugyfelszerkesztes">Ügyfelek szerkesztése</a></li>
@@ -50,5 +51,6 @@
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js" ></script>
+	<script src="../static/js/main.js" th:href="@{/js/main.js}"></script>
 </body>
 </html>
