--- a/src/main/resources/templates/ujmerlegjegyvevo.html
+++ b/src/main/resources/templates/ujmerlegjegyvevo.html
@@ -158,7 +158,7 @@
 		<br>
 		
 		<div class="container-fluid">
-			<form name="ujmerlegjegyment" action="ujmerlegjegyment"  method="POST">
+			<form name="ujmerlegjegyvevoment" action="ujmerlegjegyvevoment"  method="POST">
 			  
 			  <div class="form-group">
 			    <label for="tId">Termelő ID</label>
