--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -1,4 +1,9 @@
 @charset "UTF-8";
+
+body {
+	background: gereen !important;
+}
+/*
 .navbar {
 	margin-top:20px;
 }
@@ -58,3 +63,4 @@ address {
 .navbar-default .navbar-collapse, .navbar-default .navbar-form {
     border-color: #c7b7d6;
 }
+*/
