--- a/src/main/resources/templates/ugyfelszerkesztesment.html
+++ b/src/main/resources/templates/ugyfelszerkesztesment.html
@@ -9,66 +9,70 @@
 	<div layout:fragment="content">
 		
 		<div class="container">
-			<form name="ujtermelo" th:action="@{/ugyfelszerkesztesment}" th:object="${termeloModositott}"  method="POST">
+			<form name="szerkesztesment" action="szerkesztesment"  method="POST">
+			  <div class="form-group">
+			    <label for="termeloId">Id</label>
+			    <input type="text" class="form-control" id="termeloId"  th:value="${termelo.id}" name="termeloId" readonly>
+			  </div>
 			  <div class="form-group">
 			    <label for="termeloNev">Név</label>
-			    <input type="text" class="form-control" id="termeloNev" th:field="*{termeloNev}" th:value="${termelo.termeloNev}">
+			    <input type="text" class="form-control" id="termeloNev"  th:value="${termelo.termeloNev}" name="termeloNev">
 			  </div>
 			  <div class="form-group">
 			    <label for="termeloLnev">Leánykori név</label>
-			    <input type="text" class="form-control" id="termeloLnev" th:field="*{termeloLnev}">
+			    <input type="text" class="form-control" id="termeloLnev" th:value="${termelo.termeloLnev}" name="termeloLnev">
 			  </div>
 			  <div class="form-group">
 			    <label for="termeloCim">Cím</label>
-			    <input type="text" class="form-control" id="termeloCim" th:field="*{termeloCim}">
+			    <input type="text" class="form-control" id="termeloCim" th:value="${termelo.termeloCim}" name="termeloCim">
 			  </div>
 			  <div class="form-group">
 			    <label for="termeloSzuletesiHely">Születési hely</label>
-			    <input type="text" class="form-control" id="termeloSzuletesiHely" th:field="*{termeloSzuletesiHely}">
+			    <input type="text" class="form-control" id="termeloSzuletesiHely" th:value="${termelo.termeloSzuletesiHely}" name="termeloSzuletesiHely">
 			  </div>
 			  <div class="form-group">
 			    <label for="termeloSzuletesiIdo">Születési idő</label>
-			    <input type="date" class="form-control" id="termeloSzuletesiIdo" min="1900-01-01" max="2020-01-01" th:field="*{termeloSzuletesiIdo}">
+			    <input type="date" class="form-control" id="termeloSzuletesiIdo" min="1900-01-01" max="2020-01-01" th:value="${{termelo.termeloSzuletesiIdo}}" name="termeloSzuletesiIdo">
 			  </div>
 			  <div class="form-group">
 			    <label for="termeloEdesAnyjaNeve">Édesanyja Neve</label>
-			    <input type="text" class="form-control" id="termeloEdesAnyjaNeve" th:field="*{termeloEdesAnyjaNeve}">
+			    <input type="text" class="form-control" id="termeloEdesAnyjaNeve" th:value="${termelo.termeloEdesAnyjaNeve}" name="termeloEdesAnyjaNeve">
 			  </div>
 			  <div class="form-group">
 			    <label for="termeloTelefonSzam">Telefonszám</label>
-			    <input type="text" class="form-control" id="termeloTelefonSzam" maxlength="30" th:field="*{termeloTelefonSzam}">
+			    <input type="text" class="form-control" id="termeloTelefonSzam" maxlength="30" th:value="${termelo.termeloTelefonSzam}" name="termeloTelefonSzam">
 			  </div>
 			  <div class="form-group">
 			    <label for="termeloTajSzam">TAJ Szám</label>
-			    <input type="text" class="form-control" id="termeloTajSzam" maxlength="12" th:field="*{termeloTajSzam}">
+			    <input type="text" class="form-control" id="termeloTajSzam" maxlength="12" th:value="${termelo.termeloTajSzam}" name="termeloTajSzam">
 			  </div>
 			  <div class="form-group">
 			    <label for="termeloOstermeloiIgazolvanySzam">Őstermelői igazolvány szám</label>
-			    <input type="text" class="form-control" id="termeloOstermeloiIgazolvanySzam" th:field="*{termeloOstermeloiIgazolvanySzam}">
+			    <input type="text" class="form-control" id="termeloOstermeloiIgazolvanySzam" th:value="${termelo.termeloOstermeloiIgazolvanySzam}" name="termeloOstermeloiIgazolvanySzam">
 			  </div>
 			  <div class="form-group">
 			    <label for="termeloOstermeloiIgazolvanyErvenyesseg">Őstermelő Igazolvány érvényesség</label>
-			    <input type="date" class="form-control" id="termeloOstermeloiIgazolvanyErvenyesseg" min="1990-01-01" max="2025-01-01" th:field="*{termeloOstermeloiIgazolvanyErvenyesseg}">
+			    <input type="date" class="form-control" id="termeloOstermeloiIgazolvanyErvenyesseg" min="1990-01-01" max="2025-01-01" th:value="${{termelo.termeloOstermeloiIgazolvanyErvenyesseg}}" name="termeloOstermeloiIgazolvanyErvenyesseg">
 			  </div>
 			  <div class="form-group">
 			    <label for="termeloAdoazonositoJel">Adóazonosító jel</label>
-			    <input type="text" class="form-control" id="termeloAdoazonositoJel" th:field="*{termeloAdoazonositoJel}">
+			    <input type="text" class="form-control" id="termeloAdoazonositoJel" th:value="${termelo.termeloAdoazonositoJel}" name="termeloAdoazonositoJel">
 			  </div>
 			  <div class="form-group">
 			    <label for="termeloAdoSzam">Adószám</label>
-			    <input type="text" class="form-control" id="termeloAdoSzam" th:field="*{termeloAdoSzam}">
+			    <input type="text" class="form-control" id="termeloAdoSzam" th:value="${termelo.termeloAdoSzam}" name="termeloAdoSzam">
 			  </div>
 			  <div class="form-group">
 			    <label for="termeloCsaladiGazdasagSzam">Családi gazdaság szám</label>
-			    <input type="text" class="form-control" id="termeloCsaladiGazdasagSzam" th:field="*{termeloCsaladiGazdasagSzam}">
+			    <input type="text" class="form-control" id="termeloCsaladiGazdasagSzam" th:value="${termelo.termeloCsaladiGazdasagSzam}" name="termeloCsaladiGazdasagSzam">
 			  </div>
 			  <div class="form-group">
 			    <label for="termeloGlobalGapSzam">Global Gap szám</label>
-			    <input type="text" class="form-control" id="termeloGlobalGapSzam" th:field="*{termeloGlobalGapSzam}">
+			    <input type="text" class="form-control" id="termeloGlobalGapSzam" th:value="${termelo.termeloGlobalGapSzam}" name="termeloGlobalGapSzam">
 			  </div>
 			  <div class="form-group">
 			    <label for="termeloBankszamlaSzam">Bankszámlaszám</label>
-			    <input type="text" class="form-control" id="termeloBankszamlaSzam" th:field="*{termeloBankszamlaSzam}">
+			    <input type="text" class="form-control" id="termeloBankszamlaSzam" th:value="${termelo.termeloBankszamlaSzam}" name="termeloBankszamlaSzam">
 			  </div>
 			  <button type="submit" class="btn btn-primary">Mentés</button>
 			</form>
