--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -8,38 +8,108 @@
 <body>
 		
 	<div layout:fragment="content">
+	
+		<h3 id="teszt"></h3>
 		
-		<h2>Behozott növény súly összesem: </h2>
+		<h2>Behozott torma súly összesen: </h2>
 		
 		<div class="container-fluid">
 			<table class="table">
 				<thead>
 				    <tr>
-				      <th scope="col">I. osztály</th>
-				      <th scope="col">II. osztály</th>
-				      <th scope="col">III. osztály</th>
-				      <th scope="col">IV osztály</th>
-				      <th scope="col">Vastag gyökér</th>
-				      <th scope="col">Vékony gyökér</th>
+				      <th scope="col">I. osztály (kg)</th>
+				      <th scope="col">II. osztály (kg)</th>
+				      <th scope="col">III. osztály (kg)</th>
+				      <th scope="col">IV osztály (kg)</th>
+				      <th scope="col">Vastag gyökér (kg)</th>
+				      <th scope="col">Vékony gyökér (kg)</th>
 				      
 				    </tr>
 				 </thead>
-				<tbody th:each="termelo : ${termelo}">
+				<tbody>
 				    <tr>
-				      <td th:text="${termelo[0]}">Mark</td>
-				      <td th:text="${termelo[1]}">Mark</td>
-				      <td th:text="${termelo[2]}">Otto</td>
-				      <td th:text="${termelo[3]}">sdf</td>
-				      <td th:text="${termelo[4]}">sdf</td>
-				      <td th:text="${termelo[5]}">sdf</td>
+				      <td th:text="${elsoOsztSulyTermelo}">Mark</td>
+				      <td th:text="${masodOsztSulyTermelo}">Mark</td>
+				      <td th:text="${harmadOsztSulyTermelo}">Otto</td>
+				      <td th:text="${negyedOsztSulyTermelo}">sdf</td>
+				      <td th:text="${vastagGyokerSulyTermelo}">sdf</td>
+				      <td th:text="${vekonyGyokerSulyTermelo}">sdf</td>
 				      
 				    </tr>
 				    
 			  	</tbody>
 			</table>
+			<div class="row">
+				<div class="col-md-2">
+					<h3 class="display-3">Össz kifizetés: </h3>
+				</div>
+				<div class="col-sm-1 display-4">
+					<h3 th:text="${osszArTermelo}"></h3>
+			 	</div>
+				<div class="display-4 col-sm-1">
+					<h3 class="mr-1">Ft</h3>
+				</div>
+			
+			</div>
+		</div>
+		
+		
+		
+		<hr class="mt-2 mb-2 bg-dark">
+		
+		<br>
+		
+		<h2>Eladott torma súly összesen: </h2>
+		
+		<div class="container-fluid">
+			<table class="table">
+				<thead>
+				    <tr>
+				      <th scope="col">I. osztály (kg)</th>
+				      <th scope="col">II. osztály (kg)</th>
+				      <th scope="col">III. osztály (kg)</th>
+				      <th scope="col">IV osztály (kg)</th>
+				      <th scope="col">Vastag gyökér (kg)</th>
+				      <th scope="col">Vékony gyökér (kg)</th>
+				      
+				    </tr>
+				 </thead>
+				<tbody >
+				    <tr>
+				      <td th:text="${elsoOsztSulyVevo}">Mark</td>
+				      <td th:text="${masodOsztSulyVevo}">Mark</td>
+				      <td th:text="${harmadOsztSulyVevo}">Otto</td>
+				      <td th:text="${negyedOsztSulyVevo}">sdf</td>
+				      <td th:text="${vastagGyokerSulyVevo}">sdf</td>
+				      <td th:text="${vekonyGyokerSulyVevo}">sdf</td>
+				      
+				    </tr>
+				    
+			  	</tbody>
+			</table>
+			
+			<div class="row">
+				<div class="col-md-2">
+					<h3 class="display-3">Össz bevétel: </h3>
+				</div>
+				<div  class="col-sm-1 display-4">
+					<h3 th:text="${osszArVevo}"></h3>
+			 	</div>
+				<div class="display-4 col-sm-1">
+					<h3 class="ml-1">Ft</h3>
+				</div>
+			
+			</div>
 		
 		</div>
-		<h2>Eladott növény súly összesem: </h2>
+		
+		<br>
+		
+		<hr>
+		
+		<br>
+		
+		<h2>Telepen lévő növény mennyiség: </h2>
 		
 		<div class="container-fluid">
 			<table class="table">
@@ -54,19 +124,20 @@
 				      
 				    </tr>
 				 </thead>
-				<tbody th:each="elado : ${elado}">
+				<tbody >
 				    <tr>
-				      <td th:text="${elado[0]}">Mark</td>
-				      <td th:text="${elado[1]}">Mark</td>
-				      <td th:text="${elado[2]}">Otto</td>
-				      <td th:text="${elado[3]}">sdf</td>
-				      <td th:text="${elado[4]}">sdf</td>
-				      <td th:text="${elado[5]}">sdf</td>
+				      <td th:text="${elsoOsztSulyTelep}">2500</td>
+				      <td th:text="${masodOsztSulyTelep}">900</td>
+				      <td th:text="${harmadOsztSulyTelep}">700</td>
+				      <td th:text="${negyedOsztSulyTelep}">697</td>
+				      <td th:text="${vastagGyokerSulyTelep}">892</td>
+				      <td th:text="${vekonyGyokerSulyTelep}">166</td>
 				      
 				    </tr>
 				    
 			  	</tbody>
 			</table>
+			
 		
 		</div>
 	
