--- a/src/main/resources/templates/termelomerlegjegy.html
+++ b/src/main/resources/templates/termelomerlegjegy.html
@@ -91,6 +91,20 @@
 			<form action="" class="form-group  ">
 				<div class="form-group row ">
 					<div class="col-sm-3">
+						<label></label>
+					</div>
+					<div class="col-sm-3">
+						<label>Első mérés</label>
+					</div>
+					<div class="col-sm-3">
+						<label>Második mérés</label>
+					</div>
+					<div class="col-sm-3">
+						<label>Bruttó súly (kg)</label>
+					</div>
+				</div>
+				<div class="form-group row ">
+					<div class="col-sm-3">
 						<label>I. osztály mérés</label>
 					</div>
 					<div class="col-sm-3">
@@ -100,7 +114,7 @@
 						<input type="text" id="elsoMeresKetto" class="form-control">
 					</div>
 					<div class="col-sm-3">
-						<label id="eredmény"></label>
+						<label id="eredmény">0</label>
 					</div>
 				</div>
 				<div class="form-group row">
@@ -114,7 +128,7 @@
 						<input type="text" id="masodMeresKetto" class="form-control">
 					</div>
 					<div class="col-sm-3">
-						<label id="eredmény"></label>
+						<label id="eredmény">0</label>
 					</div>
 				</div>
 				<div class="form-group row">
@@ -128,7 +142,7 @@
 						<input type="text" id="harmadMeresKetto" class="form-control">
 					</div>
 					<div class="col-sm-3">
-						<label id="eredmény"></label>
+						<label id="eredmény">0</label>
 					</div>
 				</div>
 				<div class="form-group row">
@@ -142,7 +156,7 @@
 						<input type="text" id="negyedMeresKetto" class="form-control">
 					</div>
 					<div class="col-sm-3">
-						<label id="eredmény"></label>
+						<label id="eredmény">0</label>
 					</div>
 				</div>
 				<div class="form-group row">
@@ -156,7 +170,7 @@
 						<input type="text" id="vastagMeresKetto" class="form-control">
 					</div>
 					<div class="col-sm-3">
-						<label id="eredmény"></label>
+						<label id="eredmény">0</label>
 					</div>
 				</div>
 				<div class="form-group row">
@@ -170,7 +184,7 @@
 						<input type="text" id="vékonyMeresKetto" class="form-control">
 					</div>
 					<div class="col-sm-3">
-						<label id="eredmény"></label>
+						<label id="eredmény">0</label>
 					</div>
 				</div>
 			</form>
