--- a/src/main/resources/templates/ugyfelmentes.html
+++ b/src/main/resources/templates/ugyfelmentes.html
@@ -7,12 +7,12 @@
 <body>
 
 	<div layout:fragment="content">
-		
+		<span id="errmsg" color="red"></span>
 		<div class="container">
 			<form name="ujtermelo" action="ujtermelo"  method="POST">
 			  <div class="form-group">
 			    <label for="termeloNev">Név</label>
-			    <input type="text" class="form-control" id="termeloNev" name="termeloNev">
+			    <input type="text" class="form-control" id="termeloNev" name="termeloNev" required="required">
 			  </div>
 			  <div class="form-group">
 			    <label for="termeloLnev">Leánykori név</label>
@@ -20,7 +20,7 @@
 			  </div>
 			  <div class="form-group">
 			    <label for="termeloCim">Cím</label>
-			    <input type="text" class="form-control" id="termeloCim" name="termeloCim">
+			    <input type="text" class="form-control" id="termeloCim" name="termeloCim" required="required">
 			  </div>
 			  <div class="form-group">
 			    <label for="termeloSzuletesiHely">Születési hely</label>
@@ -28,7 +28,7 @@
 			  </div>
 			  <div class="form-group">
 			    <label for="termeloSzuletesiIdo">Születési idő</label>
-			    <input type="date" class="form-control" id="termeloSzuletesiIdo" min="1900-01-01" max="2020-01-01" name="termeloSzuletesiIdo">
+			    <input type="date" class="form-control" id="termeloSzuletesiIdo" min="1900-01-01" max="2020-01-01" name="termeloSzuletesiIdo" required="required">
 			  </div>
 			  <div class="form-group">
 			    <label for="termeloEdesAnyjaNeve">Édesanyja Neve</label>
@@ -36,39 +36,39 @@
 			  </div>
 			  <div class="form-group">
 			    <label for="termeloTelefonSzam">Telefonszám</label>
-			    <input type="text" class="form-control" id="termeloTelefonSzam" maxlength="30" name="termeloTelefonSzam">
+			    <input type="text" class="form-control  numberFormat" id="termeloTelefonSzam" maxlength="30" name="termeloTelefonSzam" required="required">
 			  </div>
 			  <div class="form-group">
 			    <label for="termeloTajSzam">TAJ Szám</label>
-			    <input type="text" class="form-control" id="termeloTajSzam" maxlength="12" name="termeloTajSzam">
+			    <input type="text" class="form-control  numberFormat" id="termeloTajSzam" maxlength="12" name="termeloTajSzam" required="required">
 			  </div>
 			  <div class="form-group">
 			    <label for="termeloOstermeloiIgazolvanySzam">Őstermelői igazolvány szám</label>
-			    <input type="text" class="form-control" id="termeloOstermeloiIgazolvanySzam" name="termeloOstermeloiIgazolvanySzam">
+			    <input type="text" class="form-control numberFormat" id="termeloOstermeloiIgazolvanySzam" name="termeloOstermeloiIgazolvanySzam" required="required">
 			  </div>
 			  <div class="form-group">
 			    <label for="termeloOstermeloiIgazolvanyErvenyesseg">Őstermelő Igazolvány érvényesség</label>
-			    <input type="date" class="form-control" id="termeloOstermeloiIgazolvanyErvenyesseg" min="1990-01-01" max="2025-01-01" name="termeloOstermeloiIgazolvanyErvenyesseg">
+			    <input type="date" class="form-control" id="termeloOstermeloiIgazolvanyErvenyesseg" min="1990-01-01" max="2025-01-01" name="termeloOstermeloiIgazolvanyErvenyesseg" required="required">
 			  </div>
 			  <div class="form-group">
 			    <label for="termeloAdoazonositoJel">Adóazonosító jel</label>
-			    <input type="text" class="form-control" id="termeloAdoazonositoJel" name="termeloAdoazonositoJel">
+			    <input type="text" class="form-control numberFormat" id="termeloAdoazonositoJel" name="termeloAdoazonositoJel" required="required">
 			  </div>
 			  <div class="form-group">
 			    <label for="termeloAdoSzam">Adószám</label>
-			    <input type="text" class="form-control" id="termeloAdoSzam" name="termeloAdoSzam">
+			    <input type="text" class="form-control numberFormat" id="termeloAdoSzam" name="termeloAdoSzam" required="required">
 			  </div>
 			  <div class="form-group">
 			    <label for="termeloCsaladiGazdasagSzam">Családi gazdaság szám</label>
-			    <input type="text" class="form-control" id="termeloCsaladiGazdasagSzam" name="termeloCsaladiGazdasagSzam">
+			    <input type="text" class="form-control numberFormat" id="termeloCsaladiGazdasagSzam" name="termeloCsaladiGazdasagSzam">
 			  </div>
 			  <div class="form-group">
 			    <label for="termeloGlobalGapSzam">Global Gap szám</label>
-			    <input type="text" class="form-control" id="termeloGlobalGapSzam" name="termeloGlobalGapSzam">
+			    <input type="text" class="form-control numberFormat" id="termeloGlobalGapSzam" name="termeloGlobalGapSzam">
 			  </div>
 			  <div class="form-group">
 			    <label for="termeloBankszamlaSzam">Bankszámlaszám</label>
-			    <input type="text" class="form-control" id="termeloBankszamlaSzam" name="termeloBankszamlaSzam">
+			    <input type="text" class="form-control numberFormat" id="termeloBankszamlaSzam" name="termeloBankszamlaSzam" required="required">
 			  </div>
 			  <button type="submit" class="btn btn-primary">Mentés</button>
 			</form>
